# coinslib

./: .gitignore  README.md  pyproject.toml
coins/: abstract_coins.py  bep20abi.py  bnb.py  btc.py  custom_exceptions.py  custom_types.py  doge.py  eth.py  ltc.py  tron.py
docs/: abstract_coins.md  doge_provider.md
providers/: abstract_provider.py  btc_provider.py  doge_provider.py  eth_provider.py  ltc_provider.py  tron_provider.py
